Added the MIT license to the program.

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Recently migrated to GitHub. Please wait until I update the program and the README file. I will also be adding a somewhat free license to the program so that other schools can take advantage of this program as well.
+Recently migrated to GitHub. Please wait until I update the program and the README file.
+
+This program is now licensed under the terms of the MIT License. Please see the LICENSE file for the terms.
